Fixed issue with hovering over clock/weather buttons causing the calendar popup to shift around

--- a/Mist/gnome-shell/gnome-shell.css
+++ b/Mist/gnome-shell/gnome-shell.css
@@ -1690,8 +1690,7 @@ find what's theming them and make sure they're all the same*/
 .weather-button:focus { /*bacon*/
     background-color: transparent;
     border-radius: 4px; /*just needs to be big enough for 50% rounding*/
-    padding: 8px;
-    margin-left: 8px;
+    padding: 8px 16px;
     color: #d9d9d9;
 }
 
